fix center and add scrollbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  overflow-x: hidden;
 }
 
 h1,
@@ -37,6 +38,74 @@ ol {
   list-style: none;
 }
 
-*{
-  color: beige;
+.content {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-around;
+  gap: 30px;
+}
+
+.result {
+
+}
+
+.result__video-container {
+
+}
+
+.result__video {
+  width: 711px;
+  height: 386px;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.search-form__fieldset {
+
+}
+
+.search-form__fieldset-title {
+
+}
+
+.search-form__label {
+
+}
+
+.search-form__label-text  {
+
+}
+
+.search-form__textfield {
+
+}
+
+.content__details {
+  align-self: flex-end;
+  width: 100%;
+  height: 60%;
+}
+
+.content__list {
+  overflow-y: scroll;
+  height: 40%;
+}
+
+.content__list-item {
+ 
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
 }
